# jk-museum

./: Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  pytest.ini
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/dependencies/: common.py  exhibition.py  exhibits.py  organizations.py  pagination.py  users.py
backend/app/api/routes/: exhibition_blocks.py  exhibitions.py  exhibits.py  files.py  healthcheck.py  login.py  organizations.py  organizations_login.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: admin_action.py  exhibit.py  exhibition.py  exhibition_block.py  exhibition_exhibit.py  exhibition_moderation_comment.py  exhibition_participant.py  exhibition_tag.py  organization.py  organization_moderation_comment.py  tag.py  user.py  user_organization.py
backend/app/crud/admin/: exhibition.py  organization.py
backend/app/db/: database.py  schemas.py
backend/app/db/models/: __init__.py  admin_action.py  exhibit.py  exhibition.py  exhibition_block.py  exhibition_block_item.py  exhibition_exhibit.py  exhibition_moderation_comment.py  exhibition_participant.py  exhibition_rating.py  exhibition_tag.py  tag.py  (+6 more)
backend/app/services/: admin_action.py  organization.py  organization_moderation_comment.py
backend/app/utils/: emails.py  exhibitions.py  healthcheck.py  logger.py  middleware.py  minio.py  organizations.py  sanitizer.py  security.py
(+249 files in other folders)
