[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "emails>=0.6",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "cryptography==44.0.2",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "greenlet>=3.1.1",
    "bcrypt>=4.3.0",
    "aiosqlite>=0.21.0",
    "aiobotocore>=2.21.1",
    "boto3>=1.37.1",
    "bleach>=6.2.0",
    "loguru>=0.7.3",
]
